package de.daniel.marlinghaus.vidr.task.vo;

/**
 * Available scan formats. Can be expanded in the future
 */
public enum ScanFormat {
  SBOM
}
