package de.daniel.marlinghaus.vidr.vulnerability;

/**
 * Used to identify the fitting vulnerability scan strategy.
 */
public enum VulnerabilityIdentifier {
  /**
   * Strategy that compares dependency metadata like GAV (group, artifact, version) with entries of
   * CVE-database. (trivy)
   */
  METADATA_DB_COMPARISION,

  /**
   * Strategy that analyzes the bytecode to determine vulnerable methods of dependencies are used on
   * runtime.
   */
  STATIC_DYNAMIC_BYTECODE_ANALYZATION
}
