package de.daniel.marlinghaus.vidr.vulnerability.scanner;

import com.fasterxml.jackson.databind.ObjectMapper;
import com.fasterxml.jackson.databind.json.JsonMapper;
import java.net.URI;
import java.util.concurrent.TimeUnit;
import org.apache.hc.client5.http.classic.methods.HttpPost;
import org.apache.hc.client5.http.config.RequestConfig;
import org.apache.hc.client5.http.impl.classic.CloseableHttpClient;
import org.apache.hc.client5.http.impl.classic.HttpClientBuilder;
import org.apache.hc.core5.http.HttpHost;

/**
 * Handle basic httpClient objects
 */
public abstract class HttpClientService implements VulnerabilityScanner {

  protected static final String CONTENT_BOUNDARY = "---Content Boundary";

  protected final ObjectMapper objectMapper;
  protected CloseableHttpClient httpClient;
  protected HttpHost httpHost;
  protected HttpPost httpPost;


  /**
   * Initialise required objects
   */
  public HttpClientService() {
    objectMapper = new JsonMapper();

    // configure client
    httpClient = HttpClientBuilder.create().setDefaultRequestConfig(
            RequestConfig.custom().setResponseTimeout(1, TimeUnit.MINUTES).build())
        .build();
  }

  /**
   * @return prefix path of the client url
   */
  protected abstract String getUrlPrefix();

  @Override
  public void initClient(URI url) {
    httpPost = new HttpPost(
        url.resolve(getUrlPrefix()));
    httpHost = HttpHost.create(url);
  }

  @Override
  public void close() throws Exception {
    httpClient.close();
  }

}
