package de.daniel.marlinghaus.vidr.vulnerability.scanner;

import de.daniel.marlinghaus.vidr.vulnerability.scanner.vo.ScanJob;
import de.daniel.marlinghaus.vidr.vulnerability.VulnerabilityIdentifier;
import java.io.OutputStream;
import java.net.URI;
import java.nio.file.Path;
import lombok.Builder;

//FIXME WIP
@Builder
public class SteadyClientScanner implements VulnerabilityScanner {

  static final VulnerabilityIdentifier IDENTIFIER = VulnerabilityIdentifier.STATIC_DYNAMIC_BYTECODE_ANALYZATION;

  /**
   * @throws Exception
   */
  @Override
  public void close() throws Exception {

  }

  /**
   * @return
   */
  @Override
  public VulnerabilityIdentifier getIdentifier() {
    return IDENTIFIER;
  }

  /**
   * @param url
   */
  @Override
  public void initClient(URI url) {

  }

  /**
   * @param job
   * @param scanObject
   * @return
   */
  @Override
  public OutputStream scan(ScanJob job, Path scanObject) {
    return null;
  }
}
